test/resources/type-checking/bad/AddWrongTypes.cc
int main()
{
  int x = 2;
  double y = 2.0;

  int x2 = x+x;
  double y2 = y+y;
  string str = "hello" + "world";
  // will fail
  bool b = true+true;

  return 0;
}

